# tradingagents-ui

./: .gitignore  SPEC.md  app.py  config.yaml  pyproject.toml  requirements.txt
.progress/: run_1.json  run_4.json  run_99.json
core/: alerts.py  config.py  database.py  earnings.py  export.py  news.py  portfolio.py  progress.py  runner.py  screener_data.py  theme.py
pages/: analysis.py  history.py  results.py  screener.py  settings.py
static/: style.css  style_light.css
tests/: conftest.py  test_alerts.py  test_database.py  test_export.py  test_icons.py  test_integration.py  test_news.py  test_portfolio.py  test_screener_data.py
views/: alerts.py  analysis.py  comparison.py  history.py  icons.py  news.py  portfolio.py  results.py  screener.py  screener_charts.py  screener_technical.py  settings.py
